# undeniable-signature

./: README  abstract.shtml  mkeys  mova
Client/: .classpath  build.xml
Client/src/: Toto.java
Evoting/: .classpath  .project  AndroidManifest.xml
Evoting/res/layout/: ballot.xml  candidate_layout.xml  election_object.xml  question_object.xml  vote_list.xml  votes_row.xml
Evoting/res/values/: colors.xml  dimensions.xml  strings.xml
Server/: .classpath  build.xml  mkeys  mova
Server/challenges/: -15626668  -15626668.res  -15626668.sol  -1600404371  -1600404371.sol  1516552842  1516552842.sc  236791577.res  236791577.sc  236791577.sol  3556498  3556498.sol  80818744.res  80818744.sol
Server/doc/: overview-frame.html  serialized-form.html
Server/doc/index-files/: index-1.html  index-11.html  index-12.html  index-13.html  index-3.html  index-4.html  index-6.html
Share/: .classpath  build.xml
Share/doc/: allclasses-noframe.html  constant-values.html  help-doc.html  index.html  overview-summary.html  overview-tree.html  serialized-form.html
Share/doc/ch/epfl/lasec/: LogContainer.html  package-tree.html  package-use.html
Share/doc/index-files/: index-11.html  index-12.html  index-13.html  index-15.html  index-16.html  index-17.html  index-18.html  index-20.html  index-3.html  index-6.html  index-8.html
Share/src/ch/epfl/lasec/: ArrayUtils.java  IOHelper.java  LogContainer.java
Sonias/: abstract.shtml  biblio.bib  biblio2.bib  cover.tex  report.aux  report.out  report.tex~  report.toc  slides.tex
UniversityContest/: .classpath
UniversityContest/doc/: help-doc.html
UniversityContest/doc/index-files/: index-1.html  index-13.html  index-15.html  index-19.html  index-4.html  index-7.html
UniversityContest/res/layout/: challenge_result_element_view.xml  config_view.xml  main.xml  possible_answer.xml  question_layout.xml  team_score_header_view.xml  team_score_row_view.xml  university_row_view.xml  university_score_list_activity_view.xml
UniversityContest/res/menu/: main_menu.xml
UniversityContest/res/values/: dimen.xml  strings.xml
challenges/: -15626668.sc  -1600404370.sol  -1600404371.res  -1942747650  -1942747650.sol  -426478669  -426478669.sol  -971082953  -971082953.sol  1252376682  1252376682.res  1252376682.sol  1516552842.res  1516552842.sol  236791577  80818744  80818744.sc
doc/: application_overview.aux  application_overview.dvi  application_overview.out  application_overview.tex  application_university_overview.aux  application_university_overview.dvi  application_university_overview.tex  application_university_overview_v2.dvi  application_university_overview_v2.tex  project_progress.aux  project_progress.dvi  project_progress.tex
gnu-crypto-2.1.0/: .ant.properties  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  THANKS  acinclude.m4  aclocal.m4  autogen.sh  config.status  configure  configure.ac  gnu-crypto.m4
gnu-crypto-2.1.0/docs/: Makefile  Makefile.am  Makefile.in  draft-marshall-gnu-keyring.nroff  fdl.texi  gnu-crypto.info  gnu-crypto.texi  gpl.texi  pad.texi  texinfo.tex  version.texi
gnu-crypto-2.1.0/docs/diagrams/: Makefile  Makefile.in
gnu-crypto-2.1.0/etc/: gnu-crypto-2.1.0-1-rh.spec
gnu-crypto-2.1.0/meta/: serpent.m4
gnu-crypto-2.1.0/source/: Makefile  Makefile.am  Makefile.in  choose-classes  mauve-gnu-crypto  overview.html  test_classes
gnu-crypto-2.1.0/source/gnu/crypto/: Registry.java
gnu-crypto-2.1.0/source/gnu/testlet/: config.java
issues/: challengeActivity.txt  io.txt
package/archive/: README  build.sh
package/archive/Server/: .classpath  build.xml
package/archive/Server/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-summary.html  overview-tree.html  package-list
package/archive/Share/: .classpath  build.xml
package/archive/Share/doc/: allclasses-frame.html  deprecated-list.html  overview-frame.html  package-list
package/archive/UniversityContest/: .classpath  .project  AndroidManifest.xml  build.xml
package/archive/UniversityContest/doc/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  index.html  overview-tree.html  package-list
package/archive/report/: conclusion.tex  design.tex  introduction.tex  preliminaries.tex  report.tex
package/archive/report/pic/: off_server.eps
package/archive/screenshots/: menu.eps  team_manager.eps  unicontest_activity_quiz.eps  unicontest_activity_uni.eps  unicontest_menu.eps
package/archive/slides/: slides.tex
pic/: university_icon.xcf
report/: New Text Document.txt  application.tex  bibliography.bib  cover.tex  mova.tex  report.aux  report.bbl  report.blg  report.dvi  report.fff  report.lof  report.out  report.toc
screenshots/: challenge_manager.eps  unicontest_activity_quizresult.eps  unicontest_activity_team.eps  university_manager.eps
slides/: comments.txt  python1.eps  slides.aux  slides.dvi  slides.nav  slides.out  slides.ps  slides.toc
summer_05_hammoutene/: abstract.shtml
summer_05_hammoutene/FINAL MOVA/: CryptFile.aps  READ_ME_FIRST.txt  quartic.h  resource.h
summer_05_hammoutene/FINAL MOVA/crypt1/: crypt1.dsw  crypt1.ncb  crypt1.opt  crypt1.plg
summer_05_hammoutene/FINAL MOVA/crypt1/Debug/: crypt1.ilk  vc60.idb
summer_05_hammoutene/FINAL MOVA/cryptlib/: ltc_tommath.h
todo/: universitycontest.txt
winter_04_05_oswald/demonstrator/source/: CryptFile.aps  CryptFile.rc  dictionnaire.h  main.cpp  prng.h  progressbar.h  quartic.h  serveur.h  tomcrypt.lib
winter_04_05_oswald/demonstrator/source/crypt1/: crypt1.dsp  crypt1.ncb  crypt1.opt  crypt1.plg
winter_04_05_oswald/demonstrator/source/cryptlib/: mycrypt.h
winter_04_05_oswald/documents/: cover.tex  poster.tex  report.tex  slides.tex  webpage.html
winter_04_05_oswald/tester/: Makefile  compare.c  damgard.c  damgard.h  discreteLogarithm.c  discreteLogarithm.h  frequence_cpu.c  frequence_cpu.h  help.c  help.h  jacobi.c  jacobi.h  program  quartic1.c  quartic1.h  quartic2.c  quartic2.h  rsa.c  rsa.h
(+319 files in other folders)
